<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/background"
    android:elevation="4dp"
    android:layoutDirection="ltr">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/design_BTN_back"
            style="@style/Widget.Material3.Button.Icon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:iconTint="@null"
            android:backgroundTint="#f5f5f5"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:icon="@drawable/ic_back"
            app:iconGravity="textEnd"
            app:iconSize="45dp" />

        <TextView
            android:id="@+id/design_TV_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/back"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="22dp"
            android:textColor="#000000"
            android:fontFamily="sans-serif-light"/>
    </LinearLayout>

    <TextView
        android:id="@+id/design_TV_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="15dp"
        android:textColor="#CCCCCC"
        android:layout_marginStart="8dp"
        android:fontFamily="sans-serif-light"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/design_BTN_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theme"
        android:backgroundTint="#f5f5f5"
        android:textColor="@android:color/black"
        app:icon="@drawable/ic_theme"
        app:iconTint="@null"
        app:iconSize="24dp"
        android:textSize="18dp"
        android:gravity="start"
        app:iconPadding="8dp"
        android:padding="12dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/design_BTN_new_palette"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_new_palette"
        android:backgroundTint="#f5f5f5"
        android:textColor="@android:color/black"
        app:icon="@drawable/ic_color_palette"
        app:iconTint="@null"
        app:iconSize="24dp"
        android:textSize="18dp"
        android:gravity="start"
        app:iconPadding="8dp"
        android:padding="12dp"/>

</androidx.appcompat.widget.LinearLayoutCompat>