<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/home_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    android:backgroundTint="@color/background">

    <LinearLayout
        android:id="@+id/home_main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:gravity="center_horizontal">

        <!--  (Toolbar) -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/home_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title=" "
            android:gravity="center"
            app:navigationIcon="@drawable/ic_sidebar"
            android:layout_gravity="end" />

        <TextView
            android:id="@+id/home_TV_hello_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_noa_sharabi"
            android:textColor="#3F3F3F"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/home_TV_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/metime"
            android:textColor="#C05C92"
            android:textSize="43sp"
            android:textStyle="bold|italic"
            android:layout_marginBottom="16dp"
            />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/home_IMG"
            android:layout_width="160dp"
            android:layout_height="160dp"
            app:srcCompat="@drawable/img_logo_pic"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/home_BTN_new_appointment"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:text="@string/new_appointment"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:backgroundTint="#E3D3F1"
            android:layout_marginTop="10dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/home_BTN_my_appointments"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:text="@string/my_appointments"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:backgroundTint="#E3D3F1"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/home_TV_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_next_appointment"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="start"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/home_TV_info_box"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:padding="12dp"
            android:background="@drawable/rectangle_shape"
            android:textColor="#3F3F3F"
            android:textSize="22sp"
            android:lineSpacingExtra="8dp" />
    </LinearLayout>

    <!--  (Side Bar) -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/home_navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white"
        app:menu="@menu/drawer_menu"
        android:layoutDirection="ltr"/>

</androidx.drawerlayout.widget.DrawerLayout>
